# optimization

./: README.md  Task1.ipynb  Task2.ipynb  Task2_EDA.ipynb  Task2_model.ipynb  data_loader.py  first.ipynb  pyproject.toml
first_task/: vizualizator.py
src/: data_loader.py
src/task1/: config.py  evaluator.py  optimizer.py  visualizer.py
src/task2/: Task2_EDA.ipynb  Task2_duration_model.ipynb  Task2_model.ipynb  duration_fcst_pipe.pkl  evaluator.py  feature_engineering.py
